--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -79,7 +79,7 @@ model:
             enable: false
             space_norm: false
         transformer:
-            enable: true
+            enable: false
             independent: true
             num_regress: 1
         arc:
