[Exp] offset_102/Apr24_223404:
- joint_optimize_transformer: false

--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -24,7 +24,7 @@ train:
         momentum: 0.0
         arc_sigma_dec_iter: 0
         transformer_grow_iter: 0
-        joint_optimize_transformer: true
+        joint_optimize_transformer: false
 
     ind_transformer:
         ind_offset_lr: 5.e-4
