--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -80,7 +80,7 @@ model:
             enable: false
             space_norm: false
         transformer:
-            enable: false
+            enable: true
             independent: true
             num_regress: 1
         arc:
