--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -12,7 +12,7 @@ train:
     weight_decay: 0
     offset:
         always_train_block: true
-        train_min_step: 2000
+        train_min_step: 100
         lr: 1.e-3
         lr_regressor: 1.e-3
         lr_transformer: 5.e-4
@@ -24,7 +24,7 @@ train:
         momentum: 0.0
         arc_sigma_dec_iter: 0
         transformer_grow_iter: 0
-        joint_optimize_transformer: true
+        joint_optimize_transformer: false
 
     ind_transformer:
         ind_offset_lr: 5.e-4
@@ -69,7 +69,7 @@ model:
 
     learnable_offset:
         expand_chan_ratio: [2, 1, 1, 1, 0.5, 0.5, 0.5, 0.25, 0.25, 0.25, 0.25, 0.25, 0.125]
-        use_special: [0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0]
+        use_special: [0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0]
         dpool_size: 0
         regress_offset: false
         use_in_predictor: false
