--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -16,7 +16,7 @@ train:
         lr: 1.e-3
         lr_regressor: 1.e-3
         lr_transformer: 5.e-4
-        lr_gamma: 0.3
+        lr_gamma: 1
         lr_decay_step: 100000 # 15 * 6543
         lr_dpool_sigma: 5.e-4
         lr_arc_sigma: 5.e-4
@@ -24,7 +24,7 @@ train:
         momentum: 0.0
         arc_sigma_dec_iter: 0
         transformer_grow_iter: 0
-        joint_optimize_transformer: false
+        joint_optimize_transformer: true
 
     ind_transformer:
         ind_offset_lr: 5.e-4
