--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -24,7 +24,7 @@ train:
         momentum: 0.0
         arc_sigma_dec_iter: 0
         transformer_grow_iter: 0
-        joint_optimize_transformer: false
+        joint_optimize_transformer: true
 
     ind_transformer:
         ind_offset_lr: 5.e-4
@@ -80,7 +80,7 @@ model:
             enable: false
             space_norm: false
         transformer:
-            enable: false
+            enable: true
             independent: true
             num_regress: 1
         arc:
