[Exp] probe_1/Jul20_110316:
- disable transformer

--- a/experiments/probe/hparams.yaml
+++ b/experiments/probe/hparams.yaml
@@ -93,7 +93,7 @@ model:
             enable: false
             space_norm: false
         transformer:
-            enable: true
+            enable: false
             independent: false
         arc:
             enable: false
