--- a/experiments/probe/hparams.yaml
+++ b/experiments/probe/hparams.yaml
@@ -72,11 +72,11 @@ model:
 
     probe:
         num_offsets: 8
-        angle_min: -60
-        angle_max: 60
+        angle_min: -90
+        angle_max: 90
         num_angles: 9
-        scale_min: 0.75
-        scale_max: 1.25
+        scale_min: 0.5
+        scale_max: 1.5
         num_scales: 5
 
     learnable_offset:
@@ -93,7 +93,7 @@ model:
             enable: false
             space_norm: false
         transformer:
-            enable: false
+            enable: true
             independent: false
         arc:
             enable: false
